<resources>
    <string name="app_name">Nextfix</string>
    <string name="favorite">Favorite</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="no_data">No Data</string>
    <string name="info">Movie Info</string>
    <string name="description">Description</string>
    <string name="popular">Popular</string>
    <string name="poster">Poster</string>
    <string name="search">Search</string>
    <string name="overview">Overview</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="queryhint">Type Here</string>
    <string name="strip">Strip</string>
    <string name="splashlogo">SplashLogo</string>
</resources>