<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".detail.DetailInfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movieBackdrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/poster"
            android:elevation="2dp"
            android:src="@drawable/ic_baseline_local_movies_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </ImageView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movieBackdrop"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end|bottom"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-26dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/favorite"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:backgroundTint="@color/black" />

        <androidx.cardview.widget.CardView
            android:id="@+id/imageContrainer"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:backgroundTint="@color/black"
            android:layout_below="@id/movieBackdrop"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/moviePoster"
                android:src="@drawable/ic_baseline_local_movies_24"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/poster" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movieBackdrop"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_toStartOf="@+id/favButton"
            android:layout_toEndOf="@+id/imageContrainer"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/releaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movieTitle"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_toStartOf="@+id/favButton"
            android:layout_toEndOf="@+id/imageContrainer"
            android:text="@string/date"
            android:textStyle="bold"
            android:textColor="@color/white">
        </TextView>

        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"
            android:justificationMode="inter_word"
            android:textSize="23sp"
            android:text="@string/overview"
            android:textStyle="bold"
            android:layout_below="@id/imageContrainer">
        </TextView>

        <ImageView
            android:id="@+id/strip"
            android:layout_width="80dp"
            android:layout_height="3dp"
            android:layout_below="@id/overview"
            android:src="@drawable/ic_baseline_remove_24"
            android:layout_marginStart="27dp"
            android:paddingLeft="-60dp"
            android:paddingRight="-60dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/strip">
        </ImageView>

        <TextView
            android:id="@+id/movieDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"
            android:justificationMode="inter_word"
            android:text="@string/description"
            android:layout_below="@id/strip">
        </TextView>
    </RelativeLayout>

</ScrollView>